# trademanager

./: .gitignore  README.md  pyproject.toml  客户管理系统建设方案_V1_grace.docx
app/: crud.py  database.py  main.py  models.py  schemas.py  static_index.html
app/routers/: __init__.py  agents.py  contacts.py  contracts.py  customers.py  demo.py  followups.py  leads.py  opportunities.py  payments.py  reports.py
docs/: checklist.md  faq.md  mvp_scope.md  repro_check.md  repro_clean_env_template.md  repro_report.md
scripts/: dev_bootstrap.sh  dev_check.sh
tests/: test_api.py  test_packaging.py
